--- a/src/main/resources/todo/passwordbastion/FXMLs/Menu.fxml
+++ b/src/main/resources/todo/passwordbastion/FXMLs/Menu.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.Pane?>
@@ -30,12 +33,29 @@
             </Lighting>
          </effect>
       </Label>
-      <TableView fx:id="table" layoutX="77.0" layoutY="131.0" prefHeight="400.0" prefWidth="850.0" stylesheets="@../styles.css">
+      <TableView fx:id="table" layoutX="76.0" layoutY="137.0" onMouseClicked="#test" prefHeight="400.0" prefWidth="850.0" stylesheets="@../styles.css">
         <columns>
           <TableColumn fx:id="serviceColumn" prefWidth="425.0" text="Service" />
           <TableColumn fx:id="passwordCollumn" prefWidth="425.0" text="Password" />
         </columns>
       </TableView>
+      <Button fx:id="addPassword" layoutX="834.0" layoutY="38.0" mnemonicParsing="false" onAction="#addPassword" prefHeight="46.0" prefWidth="102.0" stylesheets="@../styles.css" text="Add Passoword" />
+      <Pane fx:id="addingPasswordPane" layoutX="143.0" layoutY="27.0" prefHeight="432.0" prefWidth="714.0" style="-fx-background-color: green;" visible="false">
+         <children>
+            <TextField fx:id="serviceFieldAdd" layoutX="242.0" layoutY="137.0" prefHeight="25.0" prefWidth="218.0" promptText="Service" />
+            <PasswordField fx:id="passwordFieldAdd" layoutX="242.0" layoutY="210.0" prefHeight="25.0" prefWidth="218.0" promptText="Password" />
+            <Button fx:id="submitAdd" layoutX="291.0" layoutY="288.0" mnemonicParsing="false" onAction="#addPasswordToDb" prefHeight="37.0" prefWidth="108.0" text="Button" />
+         </children>
+      </Pane>
+      <Button fx:id="deletePassword" layoutX="77.0" layoutY="38.0" mnemonicParsing="false" onAction="#deletePassword" prefHeight="46.0" prefWidth="102.0" stylesheets="@../styles.css" text="Delete" visible="false" />
+      <Button fx:id="editPassword" layoutX="204.0" layoutY="38.0" mnemonicParsing="false" onAction="#editPassword" prefHeight="46.0" prefWidth="102.0" stylesheets="@../styles.css" text="Edit" visible="false" />
+      <Pane fx:id="editingPane" layoutX="153.0" layoutY="37.0" prefHeight="432.0" prefWidth="714.0" style="-fx-background-color: green;" visible="false">
+         <children>
+            <TextField fx:id="serviceFieldEdit" layoutX="242.0" layoutY="137.0" prefHeight="25.0" prefWidth="218.0" promptText="Service" />
+            <PasswordField fx:id="passwordFieldEdit" layoutX="242.0" layoutY="210.0" prefHeight="25.0" prefWidth="218.0" promptText="Password" />
+            <Button fx:id="submitEdit" layoutX="291.0" layoutY="288.0" mnemonicParsing="false" onAction="#submitEdit" prefHeight="37.0" prefWidth="108.0" text="Button" />
+         </children>
+      </Pane>
    </children>
    <cursor>
       <Cursor fx:constant="HAND" />
